--- a/qml.qrc
+++ b/qml.qrc
@@ -7,7 +7,6 @@
         <file>qml/Label.qml</file>
         <file>qml/main.qml</file>
         <file>qml/MainMenu.qml</file>
-        <file>qml/SensorsView.qml</file>
         <file>qml/SensorLine.qml</file>
         <file>qml/ControlPad.qml</file>
         <file>qml/Touchpad.qml</file>
@@ -21,5 +20,6 @@
         <file>qml/svg/rot-right.svg</file>
         <file>qml/ControlWindow.qml</file>
         <file>qml/SemiAuto.qml</file>
+        <file>qml/TelemetryView.qml</file>
     </qresource>
 </RCC>
